<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.OtpActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/rl_first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/pink"
                android:gravity="center">


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:gravity="center"
                    android:text="@string/landing_name"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_18sdp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv1"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:gravity="center"
                    android:text="@string/landing_name_2"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv2"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:paddingBottom="@dimen/_15sdp"
                    android:background="@drawable/white_corner_shape">


                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_back"
                        android:id="@+id/img_back"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_22sdp"/>


                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_enter_otp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:gravity="center"
                        android:paddingRight="@dimen/_15sdp"
                        android:layout_toRightOf="@+id/img_back"
                        android:text="@string/enter_otp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_20sdp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_otp"
                        android:layout_below="@+id/txt_enter_otp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:gravity="center"
                        android:text="@string/otp_page_text"
                        android:textColor="@color/trasparygray"
                        android:textSize="@dimen/_12sdp"
                        android:textStyle="bold" />


                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_otp_error"
                        android:layout_below="@+id/txt_otp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_18sdp"
                        android:gravity="center"
                        android:text="@string/otp_error"
                        android:textColor="@color/red"
                        android:textSize="@dimen/_12sdp"
                        android:textStyle="bold" />


                    <com.alimuzaffar.lib.pin.PinEntryEditText
                        android:id="@+id/txt_pin_entry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:cursorVisible="true"
                        android:digits="12345"
                        android:textIsSelectable="false"
                        android:hint="12345"
                        android:inputType="number"
                        app:pinLineColors="@color/gray"
                        android:maxLength="5"
                        android:gravity="center"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:backgroundTint="@color/red"
                        android:textColorHint="@color/gray"
                        android:layout_below="@+id/txt_otp_error"
                        android:textSize="20sp"
                        android:layout_marginTop="@dimen/_29sdp"
                        />


                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/edit_number"
                        android:textColor="@color/trasparygray"
                        android:textSize="@dimen/_12sdp"
                        android:paddingLeft="@dimen/_11sdp"
                        android:id="@+id/txt_edit_mobile"
                        android:layout_marginTop="@dimen/_9sdp"
                        android:layout_below="@+id/txt_pin_entry"
                        />


                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_resend"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txt_pin_entry"
                        android:layout_marginLeft="155dp"
                        android:layout_marginTop="11dp"
                        android:visibility="invisible"
                        android:layout_toRightOf="@+id/txt_edit_mobile"
                        android:text="@string/resend_in"
                        android:textColor="@color/resend_color"
                        android:textSize="@dimen/_12sdp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txt_pin_entry"
                        android:layout_marginTop="11dp"
                        android:layout_toRightOf="@+id/txt_resend"
                        android:paddingLeft="@dimen/_5sdp"
                        android:text="@string/time"
                        android:textColor="@color/timer_color"
                        android:textSize="@dimen/_12sdp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txt_edit_mobile"
                        android:layout_marginLeft="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_60sdp"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:background="@drawable/btn_pink"
                        android:text="@string/login"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12sdp" />

                </RelativeLayout>

            </RelativeLayout>


        </RelativeLayout>


    </androidx.core.widget.NestedScrollView>

</RelativeLayout>
